# finkel

./: .appveyor.yml  .dir-locals.el  .gitattributes  .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Setup.hs  cabal.project  default.nix  shell.nix  sk-core.cabal  sk-exec.cabal  sk-kernel.cabal  sk-lang.cabal  sk-repl.cabal  sk.hsfiles  stack.yaml
app/: Main.hs  (+3 more)
core/: README.md  finkel-core.cabal  sk-core.cabal  sk.hsfiles
core/src/Finkel/: Core.fnk  Prelude.fnk
core/src/Finkel/Core/: Error.fnk  Ghc.fnk  List.fnk  Stage0.fnk  Stage1.fnk  Stage2.fnk
core/src/SK/: Plugin.sk  Repl.sk
core/src/SK/Repl/: Loop.sk  Macro.sk
core/test/: CoreTest.fnk  FunctionTest.fnk  Orphan.fnk  Spec.hs  TestAux.fnk
doc/: LICENSE  Setup.hs  conf.py  doc.cabal  index.rst  requirements.txt
doc/code/: cabal.project  hello.fnk  hello.sk  stack.yaml
doc/code/macro/: RequireMe.fnk  RequireMe.sk  arglist.fnk  arglist.sk  begin.sk  eval-when-compile.fnk  eval-when-compile.sk  eval-when.sk  fib-macro.fnk  fib-macro.sk  macro-example-1b.sk  macro-example-1c.sk  macrolet.sk  quasiquote.sk  quote.sk  raw-require.fnk  raw-require.sk  require.sk  unquote-splice.sk  unquote.fnk  unquote.sk
doc/code/my-first-package/: Setup.hs  my-first-package.cabal  package.yaml  stack.git.yaml  stack.template.yaml
doc/code/my-first-package/src/: MyFirstPackage.fnk  MyFirstPackage.sk
doc/code/my-second-package/: Setup.hs  my-second-package.cabal  stack.yaml
doc/code/my-second-package/src/: FnkCodes.fnk  HsCodes.hs  Lib.fnk  Lib.sk  SkCodes.sk
doc/code/my-second-package/test/: FactorialTest.sk  Spec.hs
doc/contents/: building-package.rst  finkel-executable.rst  install.rst  language-syntax.rst  macros.rst  sk-executable.rst
doc/include/building-package/my-first-package/: Setup.hs  my-first-package.cabal  package.yaml  stack.git.yaml  stack.template.yaml
doc/include/building-package/my-new-package/: LICENSE  README.md  Setup.hs  my-new-package.cabal  stack.yaml
doc/include/building-package/my-second-package/: README.md  my-second-package.cabal
doc/include/finkel-executable/: finkel-help-make.console  hello-prof.console  hello.console  hello.hs  hello904.console
doc/include/language-syntax/decl/: bind-pat.fnk  bind-pat.hs  bind-simpl.fnk  bind-simpl.hs  bind-where.fnk  bind-where.hs  class.fnk  class.hs  data-d1.fnk  data-d1.hs  data-d2.fnk  data-d2.hs  default.fnk  default.hs  fixity.fnk  fixity.hs  instance.fnk  instance.hs  newtype.fnk  newtype.hs  tysig-constraints.fnk  tysig-constraints.hs  tysig-many.fnk  tysig-many.hs  tysig-one.fnk  tysig-one.hs  tysym.fnk  tysym.hs
doc/include/macros/: arglist.console  arglist.fnk  begin.console  begin.fnk  eval-when-compile.console  eval-when-compile.fnk  eval-when.console  eval-when.fnk  fib-macro.console  fib-macro.fnk  macrolet.console  macrolet.fnk  quasiquote.console  quasiquote.fnk  quasiquote904.console  quote.console  quote.fnk  raw-require.console  raw-require.fnk  require.console  require.fnk  unquote-splice.console  unquote-splice.fnk  unquote.console  unquote.fnk
doc/test/: Doc.fnk  Doc.hs  Spec.hs
doc/test/Doc/: BuildingPackage.fnk  BuildingPackage.hs  FinkelExecutable.fnk  FinkelExecutable.hs  LanguageSyntax.fnk  LanguageSyntax.hs  Macros.fnk  Macros.hs  TestAux.fnk  TestAux.hs
exec/: profile.hs  sk-exec.cabal  skc.hs
exec/app/: skc.hs
finkel/: CHANGELOG.md  LICENSE  Main.hs  README.md  finkel.cabal  hschooks.c
finkel-core/: Setup.hs  finkel-core.cabal
finkel-core/src/Finkel/: Core.fnk  Core.hs  Prelude.fnk  Prelude.hs
finkel-core/test/: CoreTest.fnk  CoreTest.hs  FunctionTest.fnk  FunctionTest.hs  GhcTest.fnk  Orphan.fnk  Orphan.hs  PluginTest.hs  Spec.hs  TestAux.fnk  TestAux.hs
finkel-kernel/: LICENSE  finkel-kernel.cabal
finkel-kernel/exec/: fnkc.hs  profile.hs
finkel-kernel/include/: Syntax.h  ghc_modules.h
finkel-kernel/src/Language/: Finkel.hs
finkel-kernel/test/: EmitTest.hs  EvalTest.hs  ExceptionTest.hs  FnkTest.hs  FormTest.hs  Main.hs  MainTest.hs  MakeTest.hs  Orphan.hs  PluginTest.hs  PreprocessTest.hs  SyntaxTest.hs  TestAux.hs
finkel-setup/: README.md  finkel-setup.cabal
finkel-setup/test/: Main.hs
finkel-tool/: README.md  Setup.hs  finkel-tool.cabal  finkel.hsfiles
finkel-tool/exec/: finkel.hs
finkel-tool/test/: CLITest.fnk  CLITest.hs  GhcTest.fnk  GhcTest.hs  MainTest.fnk  MainTest.hs  ReplMacroTest.fnk  ReplMacroTest.hs  ReplTest.fnk  ReplTest.hs  Spec.hs  TestAux.fnk  TestAux.hs
finkel-tool/test/data/: Err001.fnk  LoadMe.fnk  LoadMe.hs  RunMeToo.hs  m01.fnk  m01.hs  print-int.fnk  print-int.hs  print-load-me.fnk  print-load-me.hs  run-me.hs
fkc/: LICENSE  Main.hs  README.md  fkc.cabal  hschooks.c
fnkpp/: LICENSE  Main.hs  README.md  fnkpp.cabal
kernel/: README.md  Setup.hs  finkel-kernel.cabal  sk-kernel.cabal  stack.yaml
kernel/exec/: profile.hs  skkc.hs  skkc2.hs
kernel/include/: Syntax.h  hooks.c
kernel/src/Language/: Finkel.hs  SK.hs
kernel/test/: EmitTest.hs  EvalTest.hs  FnkTest.hs  FormTest.hs  Main.hs  MainTest.hs  MakeTest.hs  Orphan.hs  SkcTest.hs  SyntaxTest.hs  TestAux.hs
lang/: LICENSE  README.md  Setup.hs  finkel-lang.cabal  sk-lang.cabal  stack.yaml
lang/app/: skc.hs
lang/exec/: sk.hs  skc.hs
lang/src/Finkel/: Core.fnk  Prelude.fnk
lang/src/SK/: Core.sk  Main.sk  Plugin.sk  Prelude.sk  Repl.sk  Setup.sk  Version.sk
lang/test/: CoreTest.fnk  CoreTest.sk  Orphan.fnk  Orphan.sk  ReplTest.sk  Spec.hs
setup/: LICENSE  README.md  finkel-setup.cabal  sk-setup.cabal
setup/test/: Main.hs
tool/: LICENSE  README.md  Setup.hs  finkel-tool.cabal  finkel.hsfiles  sk-tool.cabal  sk.hsfiles
tool/exec/: sk.hs
tool/src/Finkel/: Setup.fnk
tool/src/SK/: Setup.sk
tool/test/: CLITest.fnk  CLITest.sk  CompatTest.fnk  CompatTest.sk  MainTest.fnk  MainTest.sk  ReplMacroTest.fnk  ReplMacroTest.sk  ReplTest.fnk  ReplTest.sk  SetupTest.fnk  SetupTest.sk  Spec.hs  TestAux.fnk  TestAux.sk  TestIO.sk
tool/test/data/: RunMeToo.fnk  m01.sk  run-me.fnk  sleep-for-while.fnk  sleep-for-while.sk
(+731 files in other folders)
