name:                sk-kernel
version:             0.1.1.0
synopsis:            SK language kernel and compiler
description:         SK is a dialect of Lisp targetting Haskell.
homepage:            https://github.com/githubuser/sk-kernel#readme
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          example@example.com
copyright:           2017 8c6794b6
category:            Language
build-type:          Custom
extra-source-files:  README.md
                     test/data/syntax/*.sk
                     test/data/build/*.sk
                     test/data/build/p01/*.cabal
                     test/data/build/p01/*.yaml
                     test/data/build/p01/src/P01/*.hs
                     test/data/build/p01/src/P01/*.sk
                     test/data/build/p01/test/*.hs
cabal-version:       >= 2.0

custom-setup
  setup-depends:       base >= 4.7 && < 5
                     , Cabal >= 2.0

library
  hs-source-dirs:      src
  if impl (ghc == 8.2.*)
     hs-source-dirs:   src/ghc82x
     buildable: True
  else
     buildable: False
  exposed-modules:     Distribution.Simple.SK
                       Language.SK
                       Language.SK.Builder
                       Language.SK.Emit
                       Language.SK.Eval
                       Language.SK.Expand
                       Language.SK.Form
                       Language.SK.GHC
                       Language.SK.Homoiconic
                       Language.SK.Lexer
                       Language.SK.Make
                       Language.SK.Plugin
                       Language.SK.Reader
                       Language.SK.Run
                       Language.SK.SKC
                       Language.SK.Syntax
  build-depends:       Cabal >= 2.0
                     , array
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , ghc
                     , ghc-paths
                     , ghci
                     , time
                     , transformers
  build-tools:         alex
                     , happy
  default-language:    Haskell2010
  ghc-options:         -Wall

flag dynamic
  description:         Link dynamically
  default:             False

executable skc
  hs-source-dirs:      app
  main-is:             skc.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  if flag(dynamic)
    ghc-options:       -dynamic
  build-depends:       base
                     , ghc-paths
                     , process
                     , sk-kernel
  default-language:    Haskell2010

executable sk-profile
  hs-source-dirs:      exec
  main-is:             profile.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , sk-kernel
  default-language:    Haskell2010

test-suite sk-kernel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       EvalTest
                       FormTest
                       MakeTest
                       SyntaxTest
  build-depends:       base
                     , bytestring
                     , sk-kernel
                     , filepath
                     , directory
                     , hspec
                     , process
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sk-kernel
