name:                sk-repl
version:             0.1.0.0
synopsis:            REPL for SK
description:         REPL for SK
homepage:            https://github.com/githubuser/sk-repl#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Language
build-type:          Custom
extra-source-files:  README.md
                     src/SK/*.sk
                     src/SK/Repl/*.sk
                     test/*.sk
cabal-version:       >=1.10

custom-setup
  setup-depends:       base >= 4.7 && < 5
                     , Cabal >= 1.10
                     , sk-kernel

library
  hs-source-dirs:      src
  exposed-modules:     Paths_sk_repl
                       SK.Core
                       SK.Repl
                       SK.Repl.Apply
                       SK.Repl.Macro
                       --
                       -- Scratch.F1
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , haskeline
                     , ghc
                     , ghci
                     , transformers
                     , sk-kernel
  default-language:    Haskell2010

executable sk
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sk-repl
                     , sk-kernel
  default-language:    Haskell2010

test-suite sk-repl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sk-repl
                     , sk-kernel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       MacroTest
  other-modules:       Foo
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sk-repl
