name:                sk-repl
version:             0.1.1.0
synopsis:            REPL for SK
description:         REPL for SK
homepage:            https://github.com/githubuser/sk-repl#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Language
build-type:          Custom
extra-source-files:  README.md
                     src/SK/*.sk
                     src/SK/Repl/*.sk
                     test/*.sk
cabal-version:       >= 2.0

custom-setup
  setup-depends:       base >= 4.7 && < 5
                     , Cabal >= 2.0
                     , sk-kernel >= 0.1.3

library
  hs-source-dirs:      src
  exposed-modules:     Paths_sk_repl
                       SK.Core
                       SK.Repl
                       SK.Repl.Env
                       SK.Repl.GHC
                       SK.Repl.Macro
                       SK.User
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , haskeline
                     , ghc
                     , ghci
                     , transformers
                     , sk-kernel >= 0.1.3
  default-language:    Haskell2010
  ghc-options:       -Wall

executable sk
  -- Ghc option `-dynamic' is mandatory for runtime HValue lookup.
  -- This is because to share the object code with the compiled REPL
  -- code and the expressions typed in to the REPL.
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -dynamic -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sk-repl
                     , sk-kernel >= 0.1.3
  default-language:    Haskell2010

test-suite sk-repl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck
                     , base
                     , hspec
                     , sk-repl
                     , sk-kernel >= 0.1.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       CoreTest
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sk-repl
