name:                sk-core
version:             0.6.0.0
synopsis:            SK core language
description:         SK core functions and macros.
homepage:            https://github.com/githubuser/sk-lang#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017, 2018 Author name here
category:            Language
build-type:          Custom
extra-source-files:  README.md
                     src/SK/*.sk
                     src/SK/Core/*.sk
                     src/SK/Repl/*.sk
                     test/*.sk
cabal-version:       2.0

custom-setup
  setup-depends:       base >= 4.7 && < 5
                     , Cabal >= 2.0
                     , sk-kernel >= 0.14.0

library
  hs-source-dirs:      src
  exposed-modules:     SK.Core.List
                       SK.Core
                       SK.Setup
                       SK.Repl.Types
                       SK.Repl.Env
                       SK.Repl.IORedirect
                       SK.Repl.Listen
                       SK.Repl.Loop
                       SK.Repl.Macro
                       SK.Repl
                       SK.Prelude
                       SK.Plugin
                       Paths_sk_core
  autogen-modules:     Paths_sk_core
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , filepath
                     , haskeline
                     , ghc
                     , ghc-boot
                     , ghci
                     , network
                     , transformers
                     , sk-kernel >= 0.12.0
  default-language:    Haskell2010
  ghc-options:       -Wall

test-suite sk-core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck
                     , base
                     , directory
                     , hspec
                     , sk-core
                     , sk-kernel >= 0.12.0
  ghc-options:         -dynamic -threaded -rtsopts -with-rtsopts=-N
  other-modules:       CoreTest
                       ReplTest
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sk-core
