cabal-version:       2.0
name:                doc
version:             0.1.0.0
synopsis:            Internal test for Finkel documentation
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
copyright:           2020 8c6794b6
category:            Language
build-type:          Custom
extra-source-files:  test/*.fnk
                     test/Doc/*.fnk

description:
  Internal package to test the codes in the Finkel documentation.

flag dynamic
  description:         Dynamically link executables (except Windows)
  default:             True
  manual:              True

custom-setup
  setup-depends:       base         >= 4.7 && < 5
                     , Cabal        >= 2.0 && < 3.3
                     , finkel-setup == 0.1.0.0

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base          >= 4.7    && < 5
                     , directory     >= 1.3.0  && < 1.4
                     , filepath      >= 1.4.1  && < 1.5
                     , ghc           >= 8.2.0  && < 8.11.0
                     , process       >= 1.6.1  && < 1.7
                     , hspec         >= 2.4.8  && < 2.8
                     , QuickCheck    >= 2.10.1 && < 2.14
                       --
                     , finkel-core   == 0.1.0.0
                     , finkel-kernel == 0.1.0.0
  build-tool-depends:  finkel:finkel == 0.1.0.0
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  if !os(windows) && flag(dynamic)
    ghc-options:       -dynamic
  other-modules:       Doc
                       Doc.TestAux
                       Doc.FinkelExecutable
                       Doc.BuildingPackage
                       Doc.Macros
                       Doc.LanguageSyntax
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/finkel-lang/finkel
  subdir:   doc
