cabal-version:       2.0
name:                doc
version:             0.0.0
synopsis:            Internal test for Finkel documentation
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
copyright:           2020-2022 8c6794b6
category:            Language
build-type:          Custom

description:
  Internal package to test the codes in the Finkel documentation.

flag dynamic
  description:         Dynamically link executables (except Windows)
  default:             True
  manual:              True

custom-setup
  setup-depends:       base         >= 4.7 && < 5
                     , Cabal        >= 2.0 && < 3.11
                     , finkel-setup == 0.0.0

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Doc
                       Doc.TestAux
                       Doc.FinkelExecutable
                       Doc.BuildingPackage
                       Doc.Macros
                       Doc.LanguageSyntax
  build-depends:       base          >= 4.7    && < 5
                     , directory     >= 1.3.0  && < 1.4
                     , filepath      >= 1.4.1  && < 1.6
                     , ghc           >= 8.2.0  && < 9.11
                     , process       >= 1.6.1  && < 1.7
                     , hspec         >= 2.4.8  && < 2.12
                     , QuickCheck    >= 2.10.1 && < 2.15
                       --
                     , finkel-core   == 0.0.0
                     , finkel-kernel == 0.0.0
  build-tool-depends:  finkel:finkel == 0.0.0
  default-language:    Haskell2010

  ghc-options:         -Wall -threaded -rtsopts

  if !os(windows) && flag(dynamic)
    ghc-options:       -dynamic

  if impl (ghc >= 9.6)
    ghc-options:       -fplugin Finkel.Core.Plugin
                       -keep-hscpp-files
  else
    if impl (ghc >= 8.6.0)
      build-tool-depends:  fnkpp:fnkpp      == 0.0.0
      ghc-options:         -F -pgmF fnkpp
                           -fplugin Finkel.Core.Plugin

source-repository head
  type:     git
  location: https://github.com/finkel-lang/doc.git
  subdir:   doc
