cabal-version:       2.0
name:                doc
version:             0.0.0
synopsis:            Internal test for Finkel documentation
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
copyright:           2020-2022 8c6794b6
category:            Language
build-type:          Simple

description:
  Internal package to test the codes in the Finkel documentation.

flag dynamic
  description:         Dynamically link executables (except Windows)
  default:             True
  manual:              True

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Doc
                       Doc.TestAux
                       Doc.FinkelExecutable
                       Doc.BuildingPackage
                       Doc.Macros
                       Doc.LanguageSyntax
  build-depends:       base          >= 4.14   && < 5
                     , directory     >= 1.3    && < 1.4
                     , filepath      >= 1.4    && < 1.6
                     , ghc           >= 8.10.0 && < 9.11
                     , process       >= 1.6    && < 1.7
                     , hspec         >= 2.4.8  && < 2.12
                     , QuickCheck    >= 2.10.1 && < 2.16
                       --
                     , finkel-core   == 0.0.0
                     , finkel-kernel == 0.0.0
  build-tool-depends:  finkel:finkel == 0.0.0
                     , fnkpp:fnkpp   == 0.0.0
  default-language:    Haskell2010

  ghc-options:         -Wall -threaded -rtsopts

  -- Skipping the whole test under Windows, since it's too slow.
  if os(windows)
    buildable: False
  else
    if flag(dynamic)
      ghc-options:     -dynamic

  build-tool-depends:  fnkpp:fnkpp == 0.0.0
  ghc-options:         -F -pgmF fnkpp -optF --no-warn-interp
                       -fplugin Finkel.Core.Plugin
  if impl (ghc >= 9.6)
    ghc-options:       -keep-hscpp-files

source-repository head
  type:     git
  location: https://github.com/finkel-lang/doc.git
  subdir:   doc
