cabal-version:       2.0
name:                finkel-core
version:             0.0.0
synopsis:            Finkel language core
description:
  Finkel language core macros and functions
  .
  See the <https://finkel.readthedocs.org documentation> for more info.

homepage:            https://github.com/finkel-core/finkel#readme
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
copyright:           2017-2022 8c6794b6
category:            Language
build-type:          Custom
extra-source-files:  README.md
                     --
                     test/data/plugin/*.hs

tested-with:           GHC == 8.10.7
                     , GHC == 9.0.1
                     , GHC == 9.2.8
                     , GHC == 9.4.7
                     , GHC == 9.6.5
                     , GHC == 9.8.2
                     , GHC == 9.10.1

custom-setup
  setup-depends:       base  >= 4.14 && < 5
                     , Cabal >= 3.2  && < 3.13
                     , finkel-setup == 0.0.0

library
  hs-source-dirs:      src
  exposed-modules:     Finkel.Core
                       Finkel.Core.Functions
                       Finkel.Core.Internal
                       Finkel.Core.Plugin
                       Finkel.Prelude
                       Paths_finkel_core
  other-modules:       Finkel.Core.Internal.Stage0
                       Finkel.Core.Internal.Stage1
                       Finkel.Core.Internal.Stage2
                       Finkel.Core.Internal.Ghc
                       Finkel.Core.Internal.Ghc.Compat
                       Finkel.Core.Internal.Ghc.Version
  autogen-modules:     Paths_finkel_core

  build-depends:       base          >= 4.14   && < 5
                     , ghc           >= 8.10.0 && < 9.11
                     , finkel-kernel == 0.0.0
  -- To import "GHC.PackageDb.packageVersion"
  if impl (ghc <= 9.0.0)
    build-depends:     ghc-boot      >= 8.2.0 && < 9

  default-language:    Haskell2010

  ghc-options:         -Wall
  build-tool-depends:  fnkpp:fnkpp == 0.0.0
  if impl (ghc >= 9.6.0)
    ghc-options:       -fplugin Language.Finkel.Plugin
                       -keep-hscpp-files
  else
    ghc-options:       -F -pgmF fnkpp -optF --warn-interp=False
                       -fplugin Language.Finkel.Plugin

test-suite finkel-core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Orphan
                       CoreTest
                       FunctionTest
                       PluginTest
                       TestAux
  build-depends:       base
                     , ghc
                     , finkel-core
                     , finkel-kernel
                     --
                     , QuickCheck >= 2.10.1 && < 2.16
                     , directory  >= 1.3    && < 1.4
                     , filepath   >= 1.4    && < 1.6
                     , hspec      >= 2.4.8  && < 2.12

  default-language:    Haskell2010

  -- Known not to work ..., disabling the test under Windows with ghc >= 9.4.
  -- The test requires object files of this package built with "-dynamic"
  -- option, which does not work well under Windows.
  if impl (ghc >= 9.4.0) && os(windows)
    buildable: False

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  if impl (ghc >= 9.6.0)
    ghc-options:       -fplugin Language.Finkel.Plugin
                       -keep-hscpp-files
  else
    build-tool-depends: fnkpp:fnkpp == 0.0.0
    ghc-options:       -F -pgmF fnkpp -optF --warn-interp=False
                       -fplugin Language.Finkel.Plugin

source-repository head
  type:     git
  location: https://github.com/finkel-lang/finkel.git
  subdir:   finkel-core
